// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EC - Page Banner align-left - renders correctly 1`] = `
<test>
  <section
    class="ecl-page-banner ecl-page-banner--default"
  >
    <div
      class="ecl-container ecl-page-banner__container"
    >
      <div
        class="ecl-page-banner__content"
      >
        <h1
          class="ecl-page-banner__title"
        >
          EU Budget for the future
        </h1>
        <p
          class="ecl-page-banner__baseline"
        >
          Innovation, economy, environment and geopolitics
        </p>
        <a
          class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after ecl-page-banner__link-cta"
          href="/example"
        >
          <span
            class="ecl-link__label"
          >
            Subscribe
          </span>
           
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#ui--corner-arrow"
            />
          </svg>
        </a>
      </div>
    </div>
  </section>
</test>
`;

exports[`EC - Page Banner align-left renders correctly with extra attributes 1`] = `
<test>
  <section
    class="ecl-page-banner ecl-page-banner--default"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <div
      class="ecl-container ecl-page-banner__container"
    >
      <div
        class="ecl-page-banner__content"
      >
        <h1
          class="ecl-page-banner__title"
        >
          EU Budget for the future
        </h1>
        <p
          class="ecl-page-banner__baseline"
        >
          Innovation, economy, environment and geopolitics
        </p>
        <a
          class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after ecl-page-banner__link-cta"
          href="/example"
        >
          <span
            class="ecl-link__label"
          >
            Subscribe
          </span>
           
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#ui--corner-arrow"
            />
          </svg>
        </a>
      </div>
    </div>
  </section>
</test>
`;

exports[`EC - Page Banner align-left renders correctly with extra class names 1`] = `
<test>
  <section
    class="ecl-page-banner ecl-page-banner--default custom-class custom-class--test"
  >
    <div
      class="ecl-container ecl-page-banner__container"
    >
      <div
        class="ecl-page-banner__content"
      >
        <h1
          class="ecl-page-banner__title"
        >
          EU Budget for the future
        </h1>
        <p
          class="ecl-page-banner__baseline"
        >
          Innovation, economy, environment and geopolitics
        </p>
        <a
          class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after ecl-page-banner__link-cta"
          href="/example"
        >
          <span
            class="ecl-link__label"
          >
            Subscribe
          </span>
           
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#ui--corner-arrow"
            />
          </svg>
        </a>
      </div>
    </div>
  </section>
</test>
`;

exports[`EC - Page Banner default - renders correctly 1`] = `
<test>
  <section
    class="ecl-page-banner ecl-page-banner--default ecl-page-banner--centered"
  >
    <div
      class="ecl-container ecl-page-banner__container"
    >
      <div
        class="ecl-page-banner__content"
      >
        <h1
          class="ecl-page-banner__title"
        >
          EU Budget for the future
        </h1>
        <p
          class="ecl-page-banner__baseline"
        >
          Innovation, economy, environment and geopolitics
        </p>
        <a
          class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after ecl-page-banner__link-cta"
          href="/example"
        >
          <span
            class="ecl-link__label"
          >
            Subscribe
          </span>
           
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#ui--corner-arrow"
            />
          </svg>
        </a>
      </div>
    </div>
  </section>
</test>
`;

exports[`EC - Page Banner default renders correctly with extra attributes 1`] = `
<test>
  <section
    class="ecl-page-banner ecl-page-banner--default ecl-page-banner--centered"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <div
      class="ecl-container ecl-page-banner__container"
    >
      <div
        class="ecl-page-banner__content"
      >
        <h1
          class="ecl-page-banner__title"
        >
          EU Budget for the future
        </h1>
        <p
          class="ecl-page-banner__baseline"
        >
          Innovation, economy, environment and geopolitics
        </p>
        <a
          class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after ecl-page-banner__link-cta"
          href="/example"
        >
          <span
            class="ecl-link__label"
          >
            Subscribe
          </span>
           
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#ui--corner-arrow"
            />
          </svg>
        </a>
      </div>
    </div>
  </section>
</test>
`;

exports[`EC - Page Banner default renders correctly with extra class names 1`] = `
<test>
  <section
    class="ecl-page-banner ecl-page-banner--default ecl-page-banner--centered custom-class custom-class--test"
  >
    <div
      class="ecl-container ecl-page-banner__container"
    >
      <div
        class="ecl-page-banner__content"
      >
        <h1
          class="ecl-page-banner__title"
        >
          EU Budget for the future
        </h1>
        <p
          class="ecl-page-banner__baseline"
        >
          Innovation, economy, environment and geopolitics
        </p>
        <a
          class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after ecl-page-banner__link-cta"
          href="/example"
        >
          <span
            class="ecl-link__label"
          >
            Subscribe
          </span>
           
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#ui--corner-arrow"
            />
          </svg>
        </a>
      </div>
    </div>
  </section>
</test>
`;

exports[`EC - Page Banner image - renders correctly 1`] = `
<test>
  <section
    class="ecl-page-banner ecl-page-banner--image ecl-page-banner--centered"
  >
    <div
      class="ecl-page-banner__image"
      style="background-image:url(https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg)"
    />
    <div
      class="ecl-container ecl-page-banner__container"
    >
      <div
        class="ecl-page-banner__content"
      >
        <h1
          class="ecl-page-banner__title"
        >
          EU Budget for the future
        </h1>
        <p
          class="ecl-page-banner__baseline"
        >
          Innovation, economy, environment and geopolitics
        </p>
        <a
          class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after ecl-page-banner__link-cta"
          href="/example"
        >
          <span
            class="ecl-link__label"
          >
            Subscribe
          </span>
           
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#ui--corner-arrow"
            />
          </svg>
        </a>
      </div>
    </div>
  </section>
</test>
`;

exports[`EC - Page Banner image renders correctly with extra attributes 1`] = `
<test>
  <section
    class="ecl-page-banner ecl-page-banner--image ecl-page-banner--centered"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <div
      class="ecl-page-banner__image"
      style="background-image:url(https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg)"
    />
    <div
      class="ecl-container ecl-page-banner__container"
    >
      <div
        class="ecl-page-banner__content"
      >
        <h1
          class="ecl-page-banner__title"
        >
          EU Budget for the future
        </h1>
        <p
          class="ecl-page-banner__baseline"
        >
          Innovation, economy, environment and geopolitics
        </p>
        <a
          class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after ecl-page-banner__link-cta"
          href="/example"
        >
          <span
            class="ecl-link__label"
          >
            Subscribe
          </span>
           
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#ui--corner-arrow"
            />
          </svg>
        </a>
      </div>
    </div>
  </section>
</test>
`;

exports[`EC - Page Banner image renders correctly with extra class names 1`] = `
<test>
  <section
    class="ecl-page-banner ecl-page-banner--image ecl-page-banner--centered custom-class custom-class--test"
  >
    <div
      class="ecl-page-banner__image"
      style="background-image:url(https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg)"
    />
    <div
      class="ecl-container ecl-page-banner__container"
    >
      <div
        class="ecl-page-banner__content"
      >
        <h1
          class="ecl-page-banner__title"
        >
          EU Budget for the future
        </h1>
        <p
          class="ecl-page-banner__baseline"
        >
          Innovation, economy, environment and geopolitics
        </p>
        <a
          class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after ecl-page-banner__link-cta"
          href="/example"
        >
          <span
            class="ecl-link__label"
          >
            Subscribe
          </span>
           
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#ui--corner-arrow"
            />
          </svg>
        </a>
      </div>
    </div>
  </section>
</test>
`;

exports[`EC - Page Banner image-shade - renders correctly 1`] = `
<test>
  <section
    class="ecl-page-banner ecl-page-banner--image-shade ecl-page-banner--centered"
  >
    <div
      class="ecl-page-banner__image"
      style="background-image:url(https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg)"
    />
    <div
      class="ecl-container ecl-page-banner__container"
    >
      <div
        class="ecl-page-banner__content"
      >
        <h1
          class="ecl-page-banner__title"
        >
          EU Budget for the future
        </h1>
        <p
          class="ecl-page-banner__baseline"
        >
          Innovation, economy, environment and geopolitics
        </p>
        <a
          class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after ecl-page-banner__link-cta"
          href="/example"
        >
          <span
            class="ecl-link__label"
          >
            Subscribe
          </span>
           
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#ui--corner-arrow"
            />
          </svg>
        </a>
      </div>
    </div>
  </section>
</test>
`;

exports[`EC - Page Banner image-shade renders correctly with extra attributes 1`] = `
<test>
  <section
    class="ecl-page-banner ecl-page-banner--image-shade ecl-page-banner--centered"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <div
      class="ecl-page-banner__image"
      style="background-image:url(https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg)"
    />
    <div
      class="ecl-container ecl-page-banner__container"
    >
      <div
        class="ecl-page-banner__content"
      >
        <h1
          class="ecl-page-banner__title"
        >
          EU Budget for the future
        </h1>
        <p
          class="ecl-page-banner__baseline"
        >
          Innovation, economy, environment and geopolitics
        </p>
        <a
          class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after ecl-page-banner__link-cta"
          href="/example"
        >
          <span
            class="ecl-link__label"
          >
            Subscribe
          </span>
           
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#ui--corner-arrow"
            />
          </svg>
        </a>
      </div>
    </div>
  </section>
</test>
`;

exports[`EC - Page Banner image-shade renders correctly with extra class names 1`] = `
<test>
  <section
    class="ecl-page-banner ecl-page-banner--image-shade ecl-page-banner--centered custom-class custom-class--test"
  >
    <div
      class="ecl-page-banner__image"
      style="background-image:url(https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg)"
    />
    <div
      class="ecl-container ecl-page-banner__container"
    >
      <div
        class="ecl-page-banner__content"
      >
        <h1
          class="ecl-page-banner__title"
        >
          EU Budget for the future
        </h1>
        <p
          class="ecl-page-banner__baseline"
        >
          Innovation, economy, environment and geopolitics
        </p>
        <a
          class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after ecl-page-banner__link-cta"
          href="/example"
        >
          <span
            class="ecl-link__label"
          >
            Subscribe
          </span>
           
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#ui--corner-arrow"
            />
          </svg>
        </a>
      </div>
    </div>
  </section>
</test>
`;

exports[`EC - Page Banner primary - renders correctly 1`] = `
<test>
  <section
    class="ecl-page-banner ecl-page-banner--primary ecl-page-banner--centered"
  >
    <div
      class="ecl-container ecl-page-banner__container"
    >
      <div
        class="ecl-page-banner__content"
      >
        <h1
          class="ecl-page-banner__title"
        >
          EU Budget for the future
        </h1>
        <p
          class="ecl-page-banner__baseline"
        >
          Innovation, economy, environment and geopolitics
        </p>
        <a
          class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after ecl-page-banner__link-cta"
          href="/example"
        >
          <span
            class="ecl-link__label"
          >
            Subscribe
          </span>
           
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#ui--corner-arrow"
            />
          </svg>
        </a>
      </div>
    </div>
  </section>
</test>
`;

exports[`EC - Page Banner primary renders correctly with extra attributes 1`] = `
<test>
  <section
    class="ecl-page-banner ecl-page-banner--primary ecl-page-banner--centered"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <div
      class="ecl-container ecl-page-banner__container"
    >
      <div
        class="ecl-page-banner__content"
      >
        <h1
          class="ecl-page-banner__title"
        >
          EU Budget for the future
        </h1>
        <p
          class="ecl-page-banner__baseline"
        >
          Innovation, economy, environment and geopolitics
        </p>
        <a
          class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after ecl-page-banner__link-cta"
          href="/example"
        >
          <span
            class="ecl-link__label"
          >
            Subscribe
          </span>
           
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#ui--corner-arrow"
            />
          </svg>
        </a>
      </div>
    </div>
  </section>
</test>
`;

exports[`EC - Page Banner primary renders correctly with extra class names 1`] = `
<test>
  <section
    class="ecl-page-banner ecl-page-banner--primary ecl-page-banner--centered custom-class custom-class--test"
  >
    <div
      class="ecl-container ecl-page-banner__container"
    >
      <div
        class="ecl-page-banner__content"
      >
        <h1
          class="ecl-page-banner__title"
        >
          EU Budget for the future
        </h1>
        <p
          class="ecl-page-banner__baseline"
        >
          Innovation, economy, environment and geopolitics
        </p>
        <a
          class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after ecl-page-banner__link-cta"
          href="/example"
        >
          <span
            class="ecl-link__label"
          >
            Subscribe
          </span>
           
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#ui--corner-arrow"
            />
          </svg>
        </a>
      </div>
    </div>
  </section>
</test>
`;
